--- a/e-commerce-website/src/product-Page/product.css
+++ b/e-commerce-website/src/product-Page/product.css
@@ -1,9 +1,9 @@
-.Product-container {
+ .Product-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-}
+} 
 
 .Product-image {
   margin: 30px;
@@ -86,6 +86,14 @@ body{
   align-items: center;
   justify-content: center;
   background-color: black;
+}
+
+
+.grid-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 3fr 3fr 3fr ;
+  gap: 20px;
 }
 
 
